deploy/make-line/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: make-line
  labels:
    app: make-line
