deploy/make-line/base/deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: make-line
  namespace: make-line
  labels:
    app: make-line
spec:
  containers:
  - name: app
    imagePullPolicy: IfNotPresent
    image: docker.io/library/make-line:0.4.0
    args:
      - --log
    ports:
    - name: http
      containerPort: 8080
    livenessProbe:
      httpGet:
        path: /make-line/healthz
        port: http
      initialDelaySeconds: 5
      failureThreshold: 10
      periodSeconds: 60
    startupProbe:
      httpGet:
        path: /make-line/readyz
        port: http
      initialDelaySeconds: 5
      failureThreshold: 60
      periodSeconds: 2
    resources:
      limits:
        memory: 128Mi
        cpu: 200m
      requests:
        memory: 64Mi
        cpu: 100m
