deploy/make-line/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: make-line
  namespace: make-line
  labels:
    app: make-line
spec:
  type: ClusterIP
  selector:
    app: make-line
  ports:
    - port: 8080
      targetPort: 8080
