deploy/make-line/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: make-line
  namespace: make-line
  labels:
    app: make-line
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /make-line
            pathType: Prefix
            backend:
              service:
                name: make-line
                port:
                  number: 8080
